# fsc-vehicle-microservice

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_vehicle_db_schema.py  002_vehicle_positions.py
app/: __init__.py  main.py
app/api/: internal_deps.py
app/api/api_v1/: routes.py
app/api/api_v1/endpoints/: analytics.py  media.py  tickets.py  vehicles.py
app/core/: __init__.py  config.py  exceptions.py  logging.py
app/core/database/: __init__.py  dependency.py
app/crud/: __init__.py
app/crud/command/: __init__.py  vehicle_command.py  vehicle_position_command.py
app/crud/query/: __init__.py  vehicle_position_query.py  vehicle_query.py
app/integrations/: __init__.py  outbound.py
app/models/: __init__.py  enums.py  vehicle_document_model.py  vehicle_image_model.py  vehicle_model.py  vehicle_position_model.py  vehicle_status_log_model.py
app/schemas/: vehicle_schema.py
app/services/: vehicle_service.py
tests/: conftest.py  test_smoke.py
